<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="20"
    android:animateLayoutChanges="true"
    android:background="#55000000"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/top_bar_remove"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:lines="1"

        android:gravity="center"
        android:layout_margin="1dp"
        android:textSize="@dimen/top_bar_text"
        android:textColor="@android:color/white"

        android:text="@string/top_bar_remove"/>

    <TextView
        android:id="@+id/top_bar_delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:lines="1"

        android:gravity="center"
        android:textSize="@dimen/top_bar_text"
        android:textColor="@android:color/white"

        android:text="@string/top_bar_delete"/>

    <TextView
        android:id="@+id/top_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"

        android:layout_weight="1"
        android:lines="1"

        android:gravity="center"
        android:textSize="@dimen/top_bar_text"
        android:textColor="@android:color/white"

        android:text="@string/top_bar_settings"/>

    <TextView
        android:id="@+id/top_bar_launch_count"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:ellipsize="end"
        android:textSize="@dimen/top_bar_text"
        android:textColor="@android:color/white"

        android:text="@string/top_bar_launchcount"/>

</LinearLayout>