<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:elevation="@dimen/small_margin"
            android:id="@+id/photo_card_view"
            android:layout_width="@dimen/welcome_image_size"
            android:layout_height="@dimen/welcome_image_size"
            app:cardCornerRadius="@dimen/welcome_image_size_corner_radius">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/full_name"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher_round" />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textSize="@dimen/title_text"
            android:layout_marginTop="24dp"/>
        <TextView
            android:layout_width="@dimen/welcome_page_text_width"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/app_description"
            android:textSize="@dimen/title_small_text"
            />

    </LinearLayout>



</RelativeLayout>
